已完成退房功能

--- a/doc/租房系统模块设计.md
+++ b/doc/租房系统模块设计.md
@@ -228,7 +228,7 @@
 
 2. 采集完成后点击保存，账单进入**已保存**状态，已保存状态的账单可以点击编辑，重新进入**可采集**状态，但**不可编辑**状态的账单无法重新进入**可采集**状态。生成账单的条件再加一个是有人住的基础上。
 
-   - 按时间收费类的账单，在点击保存后生成一条状态为已保存的账单，点击编辑时删除此状态为保存的账单。
+   - 按时间收费类的账单，也是要一起选。在点击保存后生成一条状态为已保存的账单，点击编辑时删除此状态为保存的账单。
 
 3. 审核
 
