准备做开单

--- a/doc/租房系统模块设计.md
+++ b/doc/租房系统模块设计.md
@@ -145,18 +145,22 @@
 
 
 
-如何判断一个chargeTemplate是否需要开bill？
+如何判断一个chargeTemplate是否需要显示开单按键？
 
 1. 按月：距离上一条bill开单超过17天
 2. 按日：距离上次开单超过1天
 3. 按年，距上次开单超过200天
-4. 按度，度数比上次多，且距上次开单超过1天
+4. 按度，距上次开单超过1天
 
 #### bill的精确模式与整合模式
 
-**精确模式：**bill严格按照所选时间与上一张bill的时间之差，计算两个时间之间的费用，费用可能为小数。
+unit不为0，也就是不是按度收费的账单有两种收费模式
+
+**精确模式：**bill严格按照所选时间与上一张bill的时间之差，计算两个时间之间的费用，费用可能为小数。退房时强制使用此模式
 
 **智能模式:** bill会以bill_set时间为准，bill的覆盖终点时间前后移动15天，以刚好与上一张bill的时间刚好形成一个周期，使费用正好为周期的倍数。
+
+而unit为0的账单，会以输入的日期为准
 
 #### bill_set的两种开票日期
 
@@ -220,6 +224,22 @@
 
 
 
+### 费用预览样例
+
+通用房租:  200 元 / 个月 * 1 个月 = 200 元
+
+通用电费: 1.5 元 / 度 * 20 度 = 30 元
+
+通用水费：2元 / 度 * 20 度 = 40 元
+
+押金: 500 元
+
+管理费: 10 元 / 个月 * 1 个月 = 10 元
+
+合计： 200 + 30 + 40 +10 - 500 = -220 元
+
+
+
 #### 账单生成的流程
 
 1. 采集信息
@@ -239,6 +259,21 @@
    列出所有状态为**审核通过**的账单，可选择生成pdf，或发送短信，或发送邮件，或发送微信的方式来生成账单。当成功执行生成pdf等操作后，账单进入**已生成**状态。
 
 所以，当搬出时，要清除所有状态为**可采集和已保存**的账单。用生成的type为搬出账单，status为已保存的账单代替。
+
+
+
+#### 开票流程
+
+- 进入开票页面，用户选择开票日期，默认日期是最近的1号，也能选择入住当天，以及当前日期，和自己输入的日期。
+- 每个房间有两个checkbox，一个是**启用**，另一个是**独选**。都可以手动勾选，当一个房间的**启用**checkBox被勾选，房间进入激活状态，可以输入各个度数，也可以在点击检查按钮，检查度数是否正确，点击保存时，使用度数生成对应的bill。当启用checkBox不被勾选时，房间无法被激活，无法接受度数输入，也无法检查度数，无法保存。
+- 当至少有一个房间点击了独选时，所有房间没被选中**独选**的房间都会进入非激活状态。如果一个房间又选中独选，又被选中启用，就没有房间能被处理了。
+- 每当开票日期发生变化，都可以点击"智能开票"按钮，每个房间都会重新按一定的规律决定是否进入激活状态。
+  - 无论开票日期是哪种，如果有一个或以上的chargeTemplateRoomId没找到最近一张bill，会进入非激活状态，并在页面提示先指定初始度数。
+  - 无论开票日期是哪种，如果所有chargeTemplatedRoomId都有最近一张bill，且有至少一张bill的type为1，则会进入激活状态。
+  - 无论开票日期是哪种，如果所有最近账单是已保存，则可以默认进入激活状态，但已保存状态的账单集无法被编辑，一旦点击"启用编辑"，会把数据库中的账单和账单集对应记录都删掉，而页面则可以编辑。type为2的账单，无法点击"启用编辑"。不存在最近账单一部分是已保存，一部分是已生成的情况。
+  - 如果开票日期是最近的1号
+
+
 
 
 
